--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 		<main class="main">
 			<div class="container">
 				<h1>Главная</h1>
+				<br />
+				<a href="about.html">About</a>
 			</div>
 		</main>
 		<!-- /.main -->
