add images task

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,7 @@
 <html lang="ru">
 	@@include("./templates/config/_head.html", { "title":"Главная"})
 	<body>
-		<header class="header" id="header">
-			@@include("./templates/layout/header/_header.html")
-		</header>
+		<header class="header" id="header">@@include("./templates/layout/header/_header.html")</header>
 		<!-- /#header.header -->
 
 		<main class="main">
@@ -12,13 +10,14 @@
 				<h1>Главная</h1>
 				<br />
 				<a href="about.html">About</a>
+				<br />
+				<br />
+				<img src="images/test.jpeg" alt="" width="400" />
 			</div>
 		</main>
 		<!-- /.main -->
 
-		<footer class="footer">
-			@@include("./templates/layout/footer/_footer.html")
-		</footer>
+		<footer class="footer">@@include("./templates/layout/footer/_footer.html")</footer>
 		<!-- /.footer -->
 	</body>
 </html>
