--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 				<br />
 				<a href="about.html">About</a>
 				<br />
+				<a href="contact.html">Contact</a>
 				<br />
 				<img src="images/test.jpeg" alt="" width="400" />
 			</div>
