--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 				<a href="contact.html">Contact</a>
 				<br />
 				<img src="images/test.jpeg" alt="" width="400" />
+				<button class="button test">Модальное окно 1</button>
 			</div>
 			<section class="section section-1"></section>
 		</main>
@@ -27,5 +28,7 @@
 		<!-- /.footer -->
 		<!-- Scroll UP -->
 		@@include("./templates/components/_scrollup.html")
+		<!-- Modals -->
+		@@include("./templates/layout/modals/_modals.html")
 	</body>
 </html>
